tests/negative/Internal/LazyBuiltin.juvix
module LazyBuiltin;

builtin bool
type Bool :=
  | true : Bool
  | false : Bool;

builtin bool-if
if : {A : Type} -> Bool -> A -> A -> A
  | true x _ := x
  | false _ x := x;

f : Bool -> Bool
  | x := if x;

